--- a/everhash/templates/base.html
+++ b/everhash/templates/base.html
@@ -39,7 +39,7 @@
             <span class="icon-bar bar-color" style="background:grey;"></span>
             <span class="icon-bar bar-color" style="background:grey;"></span>
           </button>
-          <a class="navbar-brand" href="">Everhash</a>
+          <a class="navbar-brand" href="/">Everhash</a>
         </div><!-- navbar-header -->
         
         <!-- Collect the nav links for toggling-->
@@ -98,7 +98,7 @@
         </div>
         <div class="col-md-3"></div>
         <div class="col-md-3 copyright">          
-          <p>&copy;2014 Everhash&trade; - All Rights Reserved</p>
+          <p>&copy;2014 Everhash&trade;</p>
         </div>
       </div><!--row-->
     </div><!--container-->
