--- a/everhash/templates/base.html
+++ b/everhash/templates/base.html
@@ -5,8 +5,15 @@
     <meta charset="utf-8">
     <title>{% block title %}Everhash{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Get twitter hashtag images here.">
+    <meta name="author" content="GuoChen">
+    <!-- Open Graph Data -->
+    <meta name="og:title" property="og:title" content="Everhash" />
+    <meta name="og:type" property="og:type" content="article" />
+    <meta property="og:url" property="og:url" content="" />
+    <meta property="og:image" property="og:image" content="https://pbs.twimg.com/media/BrTUUwWCQAAzNjV.png"/>
+    <meta name="og:description" property="og:description" content="" />
+    <meta name="og:site_name"property="og:site_name" content="Everhash" />
 
     <!-- Le styles -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -23,11 +30,12 @@
     <!-- Use this to quickly test CSS changes in a template,
         then move to everhash.css -->
     {% block extra_css %}{% endblock extra_css %}
-
+    
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    {% block extra_head %}{% endblock extra_head %}
   </head>
 
   <body>
@@ -114,7 +122,7 @@
     <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/everhash.js' %}"></script>
-
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53b0413c5df57466"></script>
     {% block extra_js %}{% endblock extra_js %}
   </body>
 </html>
