--- a/everhash/albums/templates/album.html
+++ b/everhash/albums/templates/album.html
@@ -50,10 +50,10 @@
 		<h1><a href="{% url 'view_album' album %}">#{{ album }}</a></h1>
 	</div>
 	<div class="row destacados">
-		<div class="col-md-12">
+		<div class="col-sm-12">
 			<div id="links">
 			{% for pic,url in pictureset %}				
-					<div class="col-md-3" style="padding-top:20px;">				
+					<div class="col-sm-3" style="padding-top:20px;">				
 						<a href="{{ url }}" title="{{ pic.owner }}" data-gallery>
 						    <img src="{{ url }}" width="300" height="300" alt="{{ pic.owner }}">
 						</a>
