--- a/everhash/albums/templates/album.html
+++ b/everhash/albums/templates/album.html
@@ -1,4 +1,15 @@
 {% extends 'base_album.html' %}
+
+{% block opengraph %}
+    <!-- Open Graph Data -->
+    <meta name="og:title" property="og:title" content="Everhash" />
+    <meta name="og:type" property="og:type" content="image" />
+    <meta property="og:url" property="og:url" content="/album/" />
+    <meta property="og:image" property="og:image" content="{{ icon }}"/>
+    <meta name="og:description" property="og:description" content="" />
+    <meta name="og:site_name"property="og:site_name" content="Everhash" />
+{% endblock opengraph %}
+
 {% block extra_css %}
 <style>
 .back-to-top {
@@ -53,20 +64,20 @@
 		<div class="col-sm-12">
 			<div id="links">
 			{% for pic,url in pictureset %}				
-					<div class="col-sm-3" style="padding-top:20px;">				
-						<a href="{{ url }}" title="{{ pic.owner }}" data-gallery>
-						    <img src="{{ url }}" width="300" height="300" alt="{{ pic.owner }}">
-						</a>
-						<div class="caption">
-							<div style="text-align:center;">
-								<a href="https://twitter.com/{{ pic.owner }}" target="_blank">@{{ pic.owner }}</a>
-								<p>{{ pic.like_count }} Favorites</p>
-							</div>
+				<div class="col-sm-3" style="padding-top:20px;">				
+					<a href="{{ url }}" title="{{ pic.owner }}" data-gallery>
+					    <img src="{{ url }}" width="300" height="300" alt="{{ pic.owner }}">
+					</a>
+					<div class="caption">
+						<div style="text-align:center;">
+							<a href="https://twitter.com/{{ pic.owner }}" target="_blank">@{{ pic.owner }}</a>
+							<p>{{ pic.like_count }} Favorites</p>
 						</div>
-						{% if forloop.counter|divisibleby:4 %}
-							<div class="clearfix"></div>
-						{% endif %}
 					</div>
+					{% if forloop.counter|divisibleby:4 %}
+						<div class="clearfix"></div>
+					{% endif %}
+				</div>
 			{% endfor %}
 			</div>
 		</div>
