--- a/everhash/templates/base.html
+++ b/everhash/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get twitter hashtag images here.">
     <meta name="author" content="GuoChen">
+    {% block opengraph %}
     <!-- Open Graph Data -->
     <meta name="og:title" property="og:title" content="Everhash" />
     <meta name="og:type" property="og:type" content="article" />
@@ -14,7 +15,7 @@
     <meta property="og:image" property="og:image" content="https://pbs.twimg.com/media/BrTUUwWCQAAzNjV.png"/>
     <meta name="og:description" property="og:description" content="" />
     <meta name="og:site_name"property="og:site_name" content="Everhash" />
-
+    {% endblock opengraph %}
     <!-- Le styles -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     
