--- a/everhash/templates/base.html
+++ b/everhash/templates/base.html
@@ -49,7 +49,8 @@
             <span class="icon-bar bar-color" style="background:grey;"></span>
             <span class="icon-bar bar-color" style="background:grey;"></span>
           </button>
-          <a class="navbar-brand" href="/">Everhash</a>
+          <br>
+          <a class="navbar-brand" href="{% url 'index' %}" style="font:Helvetica;">#Everhash</a>
         </div><!-- navbar-header -->
         
         <!-- Collect the nav links for toggling-->
