--- a/everhash/templates/base.html
+++ b/everhash/templates/base.html
@@ -91,26 +91,31 @@
     <footer class="footer">
     <div class="container">
       <div class="row">
+        
+        <div class="col-md-2">
+          <strong>About</strong>
+          <ul>
+              <li>Done by:</li>
+              <li><a href="http://hguochen.com">GuoChen</a></li>
+          </ul>
+        
+        </div>
+        <div class="col-md-2">
+          
+          <strong></strong>
+          <ul>
+            <li><a href = ""></a></li>
+          </ul>
+        
+        </div>
+        <div class="col-md-2">
+          <strong></strong>
+          <ul>
+            <li><a href = "#"></a></li>
+            <li><a href = "" target="_tab"></a></li>
+          </ul>        
+        </div>
 
-        <div class="col-md-2">
-          <strong>Press</strong>
-          <ul>
-              <li><a href ="">About Us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2">
-          <strong>Support</strong>
-          <ul>
-            <li><a href = "">Contact us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2">
-          <strong>Social</strong>
-          <ul>
-            <li><a href = "#">Facebook</a></li>
-            <li><a href = "" target="_tab">Twitter</a></li>
-          </ul>
-        </div>
         <div class="col-md-3"></div>
         <div class="col-md-3 copyright">          
           <p>&copy;2014 Everhash&trade;</p>
