[Edit] Rephrased on copywriting

--- a/everhash/albums/templates/add_album.html
+++ b/everhash/albums/templates/add_album.html
@@ -19,8 +19,9 @@ Post Question
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="text-center">Add new album!</h1>
-			<br>
-			<p class="text-center">Add an album to your album lists by hashtag and we will collate the pictures automagically for you!</p>
+			<br>			
+			<p class="text-center">Album name is the #hashtag to get pictures for.</p>
+			<p class="text-center">Everhash will collate the pictures automagically for you.</p>
 			<p class="text-center">You are welcome.</p>
 			<br>
 
